--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ button{
     cursor: pointer;
 }
 
-#menu{
+.menu{
     position: absolute;
     top: 7.5%;
     right: 4%;
@@ -271,7 +271,7 @@ button{
     transition: 0.5s;
 }
 
-#menu:hover{
+.menu:hover{
     scale: 1.1;
     transition: 0.5s;
 }
